Sun Jul 29 00:28:46 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: remove unused initialization.

Sat Jul 28 16:26:09 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* win32/win32.c (gmtime_r): use _gmtime64_s() with x86_64-w64-mingw32.

	* win32/win32.c (localtime_r): use _localtime64_s() with
	  x86_64-w64-mingw32. Since FileTimeToSystemTime() seems not work with
	  large value under x64. Mingw-w64 doesn't have these declaration.
	  [ruby-core:46780] [Bug #6794]

Fri Jul 27 18:25:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_check_io): make public.

	* process.c (check_exec_redirect): try conversion to IO on redirect
	  parameters.  [ruby-core:44181] [Bug #6269]

Fri Jul 27 17:58:12 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CPPOUTFILE): get rid of variable conflict so
	  CPPFLAGS is not duplicated.  [ruby-core:43097] [Bug #6119]

Fri Jul 27 12:12:36 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/mkexports.rb: should not export DllMain().
	  reported by luis at [ruby-core:46743] [Bug #6790], solved by
	  Heesob Park, and confirmed by nobu.

Thu Jul 26 14:51:29 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/http/test_https.rb (TestNetHTTPS#test_session_reuse):
	  localhost is not (always) 127.0.0.1.  Don't expect that.

Thu Jul 26 07:18:38 2012    <kanemoto@ruby-lang.org>

	* ext/json/fbuffer/fbuffer.h: avoid compilation error on AIX by
	   -ansi -std=iso9899:199409 (r36038). [ruby-core:46744] [Bug #6791].

Thu Jul 26 00:42:23 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* thread.c (thread_create_core, Init_Thread): hide
	  th->async_errinfo_queue and th->async_errinfo_mask_stack from
	  ObjectSpace.each_object.

Wed Jul 25 17:41:05 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c, rational.c: compatible marshal loader for compatibilities
	  with 1.8.  [ruby-core:45775] [Bug #6625]

Wed Jul 25 17:17:05 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
